--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
   "model": "luhua/chinese_pretrain_mrc_roberta_wwm_ext_large",
-  "use_gpu": false
+  "use_gpu": false,
+  "add_special_tokens": true
 }
