--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-fastapi==0.70.1
+fastapi==0.71.0
 loguru==0.5.3
+numpy==1.20.3
+onnxruntime==1.10.0
 pydantic==1.8.2
 torch==1.9.1
-transformers==4.7.0
+transformers==4.15.0
