--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "tokenizer": "/model/roberta-base-chinese-extractive-qa",
-  "model": "/model/roberta-base-chinese-extractive-qa/roberta-base-chinese-extractive-qa-optimized-quantized.onnx",
-  "log_dir": "/logs/",
+  "tokenizer": "models/roberta-base-chinese-extractive-qa",
+  "model": "models/roberta-base-chinese-extractive-qa-optimized-quantized.onnx",
+  "log_dir": "./logs",
   "use_gpu": false,
   "add_special_tokens": true,
   "num_threads": 3,
